--- a/acdc/albums.html
+++ b/acdc/albums.html
@@ -51,6 +51,78 @@
 				</figure>
 			</a>	
 		</div>
+		<div class="contenedor_tarjeta">
+			<a href="whomadewho.html">
+				<figure>
+					<img src="../img/acdc/whomadewho1986.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">ACϟDC</h2>
+							<hr>
+							<p>Who<br><br>Made<br><br>Who<br><br> 1986</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="powerage.html">
+				<figure>
+					<img src="../img/acdc/powerage1978.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">ACϟDC</h2>
+							<hr>
+							<p>Powerage<br><br> 1978</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="highwaytohell.html">
+				<figure>
+					<img src="../img/acdc/highwaytohell1979.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">ACϟDC</h2>
+							<hr>
+							<p>Highway<br><br> To <br><br> Hell<br><br> 1979</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="highvoltage.html">
+				<figure>
+					<img src="../img/acdc/highvoltage1976.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">ACϟDC</h2>
+							<hr>
+							<p>High<br><br>Voltage<br><br>1976</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="dirtydeedsdonedirtcheap.html">
+				<figure>
+					<img src="../img/acdc/dirtydeedsdonedirtcheap1976.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">ACϟDC</h2>
+							<hr>
+							<p>Dirty <br><br>Deeds <br><br>Done <br><br>Dirt <br><br>Cheap <br><br>1976</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="backinblack.html">
+				<figure>
+					<img src="../img/acdc/backinblack1980.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">ACϟDC</h2>
+							<hr>
+							<p>Back <br><br>In <br><br>Black <br><br>1980</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
 </section>
 
 </body>
