--- a/acdc/highvoltage.html
+++ b/acdc/highvoltage.html
@@ -4,8 +4,8 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" href="../img/acdc/flyonthewall.jpg" type="image/png">
-     <link rel="stylesheet" href="flyonthewall.css">
+     <link rel="icon" href="../img/acdc/highvoltage1976.jpg" type="image/png">
+     <link rel="stylesheet" href="highvoltage.css">
 
      <!-- icons -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,7 +19,7 @@
 <body>
 
   <section>
-    <img src="../img/acdc/flyonthewall.jpg" class="win" title="Fly On The Wall 1985">
+    <img src="../img/acdc/highvoltage1976.jpg" class="win" title="Fly On The Wall 1985">
     <header>
       <a href="../index.html" class="logo">SOD</a>
       <ul class="navigation">
@@ -33,9 +33,9 @@
 
     <div class="content">
       <div class="textBox">
-      <h2>Fly On The Wall</h2>
-      <p>Año: 1985</p>
-      <a href="https://download1320.mediafire.com/o2wl0evv91wg/x6u4m4977vv6s63/Fly+On+the+Wall.zip" target="_bank">Descargar</a>
+      <h2>High Voltage</h2>
+      <p>Año: 1976</p>
+      <a href="https://download1481.mediafire.com/k0hc24c1nrkg/mlqyy14k2irg7tl/High+Voltage.zip" target="_bank">Descargar</a>
     </div>
       </div>
 
