--- a/bands.html
+++ b/bands.html
@@ -531,8 +531,7 @@
 
 </body>
 <footer>
-	<p>Cualquier sugerencia o recomendacion para subir Música de cualquier banda de Rock&Metal es aceptable. <br>
-    Contactanos en nuestras <a href="redesociales.html">Redes</a></p>
+	<p>siguenos en nuestras <a href="redesociales.html">redes sociales</a></p>
 </footer>
    <section class="derechos">
    	<p>
