--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta charset="description" content="">
-	<meta charset="keywords" content="sod, SOD, secretofdeath, SecretOfDeath, hogar del rock&metal, Hogar Del Rock&Metal">
+	<meta charset="keywords" content="sod, SOD, secretofdeath, SecretOfDeath, hogar del rock&metal, Hogar Del Rock&Metal, descargar musica">
 	<link rel="icon" href="img/detodo/iconsod.jpg" type="image/png">
 	<link rel="stylesheet" type="text/css" href="estilo.css ">
   
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet"> 
+
+  
  
 	<title>Secret Of Death</title>
 
@@ -32,6 +34,7 @@
 	<div class="contexto">
 		<h1>Bienvenido<br>Hogar Del Rock&Metal</h1>
 	</div>
+
 	<h2>Álbums Recien Agregados</h2>
 
 	<div class="contenedor">
@@ -104,18 +107,70 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/magodeoz/gaia3atlantia2010.jpg" alt="">
+			<img src="img/acdc/highwaytohell1979.jpg" alt="">
 			<div class="capa">
-				<h3>Mägo De Oz</h3>
-				<p>Gaia III Atlantia</p> <br>
-				<a href="magodeoz/gaia3atlantia.html">Ir Al Álbum</a>
+				<h3>ACϟCD</h3>
+				<p>Highway to Hell</p> <br>
+				<a href="acdc/highwaytohell.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 	</div>
+
+
+	<h2>Bandas Recien Agregadas</h2>
+
+	<div class="contenedor">
+		<figure>
+			<img src="img/acdc/acdc.jpg" alt="">
+			<div class="capa">
+				<h3>ACϟCD</h3>
+				<br>
+				<a href="acdc/albums.html">Álbums</a>
+			</div>
+		</figure>
+		<figure>
+			<img src="img/machinehead/machineheadband.jpg" alt="">
+			<div class="capa">
+				<h3>Machine Head</h3>
+				<br>
+				<a href="acdc/albums.html">Álbums</a>
+			</div>
+		</figure>
+		<figure>
+			<img src="img/augusburnsred/augustburnsred.jpg" alt="">
+			<div class="capa">
+				<h3>Augus Burns Red</h3>
+				<br>
+				<a href="augustburnsred/albums.html">Álbums</a>
+			</div>
+		</figure>
+	</div>
+	<div class="contenedor">
+		<figure>
+			<img src="img/askingalexandria/askingalexandria.jpg" alt="">
+			<div class="capa">
+				<h3>Asking Alexandria</h3>
+				<br>
+				<a href="askingalexandria/albums.html">Álbums</a>
+			</div>
+		</figure>
+		<figure>
+			<img src="img/adaytoremember/adaytoremember.jpg" alt="">
+			<div class="capa">
+				<h3>A Day To Remember</h3>
+				<br>
+				<a href="adaytoremember/albums.html">Álbums</a>
+			</div>
+		</figure>
+	</div>
+
+
 	</body>
 <footer>
-	<p>Esta es una página para poder compartir los hoy en dia y siempre nuestros oidos necesitaron la
-	música siempre ha sido algo muy fudamental dentro de nosotros desde el cuerpo hasta el alma.</p>
+	<p>Esta es una página en la cual compartimos música para ustedes a partir de las peticioses.
+		cualquier pedido o sugerencia es bien recibida, puedes contactarnos desdes nuestro correo:
+		<a href="https://bit.ly/secretofdeathmx" target="-bank">secretofdeath00@gmail.com</a>
+	</p>
 </footer>
 <section class="derechos">
    	<p>
