--- a/redesociales.html
+++ b/redesociales.html
@@ -37,11 +37,11 @@
         <a href="https://twitter.com/SecretOfDeath1" class="twitter" target="-bank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
       </li>
     </div>
-    <div class="patreon1">
+    <!-- <div class="patreon1">
       <li data-text="Patreon" data-color="#FF5C50">
         <a href="https://www.patreon.com/secretsofdeathmx" class="patreon" target="-bank"><img src="patreon.png"></a>
       </li>
-    </div>
+    </div> -->
     </ul>
   </section>
   <script src="vanilla-tilt.min.js"></script>
