--- a/vision.html
+++ b/vision.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
-
-
-
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta charset="description" content="">
-	<meta charset="keywords" content="sod, SOD, secretofdeath, SecretOfDeath, hogar del rock&metal, Hogar Del Rock&Metal">
-	<link rel="icon" href="img/detodo/iconsod.jpg" type="image/png">
-	<link rel="stylesheet" type="text/css" href="estilo4.css">
-	<link rel="stylesheet" type="text/css" href="fonts.css">
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="vision.css">
+     <title>Secrets Of Death</title>
 
-  <!--Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet"> 
-
-	
-	<header>
+     <header>
+		<!-- menu -->
 		<a href="index.html" class="logo">SOD</a>
 		<ul class="navigator">
 			<li> <a href="index.html">Casa</a></li>
@@ -26,18 +17,26 @@
 			<li> <a class="active" href="vision.html">Vision</a></li>
 		</ul>
 	</header>
-</nav>
-	<title>Secret Of Death</title>
+
 </head>
 <body>
-<div class="imagenes">
-	<img src="img/detodo/accesodenegado.gif" alt="">
-</div>
+     <main class="fondo">
+               <div class="texto"><h2>Nuestra Vision</h2></div>
+               <div class="textouno"><p>Es compartir la música, de quien la necesite. ya que muchas personas no tiene la posibilidad o quizas no tienen el tiempo y entonces es donde nosotros actuamos para brindar este servicio.</p></div>
+     </main>
+     <main class="text">
+          <div class="titulo"><h2>Nuestra Meta</h2></div>
+          <div class="parrafo"><p>Ser reconocidos por los oyendes del Heavy Metal y Subgeneros, por lo cuál si eres nuevo por aquí. Nos Encantaria que fueras parte de nosotros, y nos compartas con más gente.</p></div>
+     </main>
+     <main class="gracias">
+          <div class="despedida"><h1>¡Gracias por pasarte por nuestra página, espero vuelvas pronto!</h1></div>
+     </main>
+     <main class="apoyo">
+          <div class="apoyouno"><a href="https://bit.ly/3mTu9CY" target="-bank">cualquier apoyo es bien recibido, para continuar con este increible proyecto.</a></div>
+     </main>
 
-</body>
 <div class="derechos">
-   	<p>
-   		todos los derecho reservados 2021 SODHDR&M
-   	</p>
+     <p>todos los derecho reservados 2021 SODHDR&M</p>
 </div>
+</body>
 </html>
