update neon text

--- a/bands.html
+++ b/bands.html
@@ -527,6 +527,18 @@
 				</figure>
 			</a>	
 		</div>
+		<div class="contenedor_tarjeta">
+			<a href="linkinpart/linkinpart.html">
+				<figure>
+					<img src="img/linkinpark/linkpartband.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Linkin Part</h2>
+							<hr>
+							<p>Linkin Park es una banda estadounidense de rock alternativo procedente de Agoura Hills, California. Se formó en 1996. Integrada por Mike Shinoda, Dave Farrell, Joe Hahn, Brad Delson, Rob Bourdon y Chester Bennington, este último como voz principal.</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
 	</section>
 
 </body>
