--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/thebeatles/1969abbeyroad.jpg" alt="">
+			<img src="img/linkinpark/hybridtheory2000.jpg" alt="">
 			<div class="capa">
-				<h3>The Beatles</h3>
-				<p>Abbey Road</p> <br>
-				<a href="thebeatles/abbeyroad.html">Ir Al Álbum</a>
+				<h3>Linkin Park</h3>
+				<p>Hybrid Theory</p> <br>
+				<a href="linkinpart/hybridtheory.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 	</div>
@@ -119,7 +119,7 @@
 
 	<h2>Bandas Recien Agregadas</h2>
 
-	<div class="contenedor">
+	<div class="contenedordos">
 		<figure>
 			<img src="img/acdc/acdc.jpg" alt="">
 			<div class="capa">
@@ -145,7 +145,7 @@
 			</div>
 		</figure>
 	</div>
-	<div class="contenedor">
+	<div class="contenedordos">
 		<figure>
 			<img src="img/askingalexandria/askingalexandria.jpg" alt="">
 			<div class="capa">
@@ -160,6 +160,14 @@
 				<h3>A Day To Remember</h3>
 				<br>
 				<a href="adaytoremember/albums.html">Álbums</a>
+			</div>
+		</figure>
+		<figure>
+			<img src="img/linkinpark/linkpartband.jpg" alt="">
+			<div class="capa">
+				<h3>Linkin Part</h3>
+				<br>
+				<a href="linkinpart/albums.html">Álbums</a>
 			</div>
 		</figure>
 	</div>
