--- a/dimmuborgir/albumsdimmuborgir.html
+++ b/dimmuborgir/albumsdimmuborgir.html
@@ -69,7 +69,7 @@
 						<figcaption class="trasera">
 							<h2 class="titulo">Dimmu Borgir</h2>
 							<hr>
-							<p>Enthrone <br><br>Darkness <br><br>Triumphant<br><br> <br><br>1997</p>
+							<p>Enthrone <br><br>Darkness <br><br>Triumphant<br><br>1997</p>
 						</figcaption>
 				</figure>
 			</a>	
@@ -81,7 +81,7 @@
 						<figcaption class="trasera">
 							<h2 class="titulo">Dimmu Borgir</h2>
 							<hr>
-							<p>Eonian <br><br> <br><br>2018</p>
+							<p>Eonian<br><br>2018</p>
 						</figcaption>
 				</figure>
 			</a>	
