--- a/dreamtheater/dreams.html
+++ b/dreamtheater/dreams.html
@@ -5,7 +5,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" href="../img/dreamtheater/logodreamtheater.png" type="image/png">
-     <link rel="stylesheet" href="estilodreams.css">
+     <link rel="stylesheet" href="dreams.css">
 
      <!-- icons -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Dream Theater</h2>
       <p>Año: 1985<br> País: Estados Unidos<br>Integrantes: James LaBrie (Vocalista), <br> John Petrucci (Guitarra), <br> Mike Mangini (Bateria), <br> John Myung (Bajo).</p>
-      <a href="albumsdreamtheater.html">Álbums</a>
+      <a href="albums.html">Álbums</a>
       <a href="concierto.html">Concierto</a>
     </div>
       </div>
