update array for epica band

--- a/epica/epica.html
+++ b/epica/epica.html
@@ -5,7 +5,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" href="../img/epica/epicalogo.png" type="image/png">
-     <link rel="stylesheet" href="estiloepica.css">
+     <link rel="stylesheet" href="epica.css">
 
      <!--Icons-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -35,7 +35,7 @@
       <div class="textBox">
       <h2>Epica</h2>
       <p>Año: 2002<br> Origen: Reuver, Países Bajos. <br>Integrantes: <br>Simone Simons (Vocalista). <br> Mark Jansen (Guitarra). <br> Isaac Delahaye (Guitarra, Líder). <br> Coen Janssen (Tecladista). <br> Ariën van Weesenbeek (Batería). <br> Rob van der Loo (Bajo).</p>
-      <a href="albumsepica.html">Álbums</a>
+      <a href="albums.html">Álbums</a>
       <a href="concierto.html">Concierto</a>
     </div>
       </div>
