--- a/evanescence/evanescence.html
+++ b/evanescence/evanescence.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Evanescence</h2>
       <p>Año: 1995<br> País: Estados Unidos<br>Integrantes: <br>Amy Lee (Piano, Vocalista), <br> Jen Majura (Guitarra), <br>Will Hunt (Bateria), <br> Tim McCord (Bajo), <br> Troy McLawhorn (Guitarra).</p>
-      <a href="albumsevanescence.html">Álbums</a>
+      <a href="albums.html">Álbums</a>
     </div>
       </div>
 
