--- a/galneryus/galneryus.html
+++ b/galneryus/galneryus.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Galneryus</h2>
       <p>Año: 2001<br> País: Japón<br>Integrantes: <br>Masathosi Ono (Vocalista), <br> Syu (Guitarra),  <br> Yuhki (Teclado), <br>TAKA (Bajo).</p>
-      <a href="albumsgalneryus.html">Álbums</a>
+      <a href="albums.html">Álbums</a>
     </div>
       </div>
 
