array Iron Maiden

--- a/ironmaiden/ironmaiden.html
+++ b/ironmaiden/ironmaiden.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Iron Maiden</h2>
       <p>Año: 1975<br> País: Inglaterra<br>Integrantes: <br>Bruce Dickinson (Vocalista), <br>Steve Harris (Bajo), <br>Dave Murray (Guitarra), <br> Adrian Smith (Guitarra), <br>Nicko McBrain (Bateria), Janick Gers (Guitarra).</p>
-      <a href="albumsironmaiden.html">Álbums</a>
+      <a href="albums.html">Álbums</a>
     </div>
       </div>
 
