--- a/judaspriest/judaspriest.html
+++ b/judaspriest/judaspriest.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Judas Priest</h2>
       <p>Año: 1970<br> País: Inglaterra <br>Rob Halford(Vocalista), <br>Glenn Tipton(Guitarra), <br>Ian Hill(Bajo), <br>Scott Travis(Batería).</p>
-      <a href="judaspriestalbums.html">Álbums</a>
+      <a href="albums.html">Álbums</a>
     </div>
       </div>
 
