--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
 	<div class="contexto">
-		<h1>Bienvenido<br>Hogar Del Rock&Metal</h1>
+		<h1>Bienvenid@ Al<br>Hogar Del Rock&Metal</h1>
 	</div>
 
 	<h2>Álbums Recien Agregados</h2>
