--- a/bands.html
+++ b/bands.html
@@ -551,5 +551,5 @@
    	</p>
    </section>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="script.js"></script>
+   <script src="cdialogo.js"></script>
 </html>
