--- a/kiss/kiss.html
+++ b/kiss/kiss.html
@@ -36,7 +36,7 @@
       <div class="textBox">
       <h2>Kiss</h2>
       <p>Año: 1973<br> País: Nueva York <br> Paul Stanley(Voz),<br>Gene Simmons(Bajo), <br>Tommy Thayer(Guitarra).</p>
-      <a href="kissalbums.html">Álbums</a>
+      <a href="albums.html">Álbums</a>
     </div>
       </div>
 
