new albums augustburnsred

--- a/augustburnsred/albums.html
+++ b/augustburnsred/albums.html
@@ -51,6 +51,42 @@
 				</figure>
 			</a>	
 		</div>
+		<div class="contenedor_tarjeta">
+			<a href="messenger.html">
+				<figure>
+					<img src="../img/augusburnsred/messenger.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">August Burns Red</h2>
+							<hr>
+							<p>Messenger<br><br>2007</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="guardians.html">
+				<figure>
+					<img src="../img/augusburnsred/guardians.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">August Burns Red</h2>
+							<hr>
+							<p>Guardians<br><br>2020</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="foundinfarawayplaces.html">
+				<figure>
+					<img src="../img/augusburnsred/foundinfarawayplaces.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">August Burns Red</h2>
+							<hr>
+							<p>Found<br><br>In<br><br>Far<br><br>Away<br><br>Places<br><br>2014</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
 </section>
 
 </body>
