--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<div class="capa">
 				<h3>Machine Head</h3>
 				<br>
-				<a href="acdc/albums.html">Álbums</a>
+				<a href="machinehead/albums.html">Álbums</a>
 			</div>
 		</figure>
 		<figure>
