update new albums adayremember

--- a/adaytoremember/albums.html
+++ b/adaytoremember/albums.html
@@ -51,6 +51,42 @@
 				</figure>
 			</a>	
 		</div>
+		<div class="contenedor_tarjeta">
+			<a href="badvibrations.html">
+				<figure>
+					<img src="../img/adaytoremember/badvibrations.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">A Day To Remember</h2>
+							<hr>
+							<p>Bad <br><br> Vibrations <br><br> 2016 </p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="homesick.html">
+				<figure>
+					<img src="../img/adaytoremember/homesick.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">A Day To Remember</h2>
+							<hr>
+							<p>Homesick <br><br>2009</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
+			<a href="yourewelcome.html">
+				<figure>
+					<img src="../img/adaytoremember/yourewelcome.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">A Day To Remember</h2>
+							<hr>
+							<p>You´re <br><br>Welcome <br><br>2021</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
 </section>
 
 </body>
