--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/therasmus/2003deadletters.jpg" alt="">
+			<img src="img/adaytoremember/homesick.jpg" alt="">
 			<div class="capa">
-				<h3>The Rasmus</h3>
-				<p>Dead Letters</p> <br>
-				<a href="therasmus/deadletters.html">Ir Al Álbum</a>
+				<h3>A Day Remember</h3>
+				<p>Homesick</p> <br>
+				<a href="adaytoremember/homesick.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 		<figure>
@@ -107,11 +107,11 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/acdc/highwaytohell1979.jpg" alt="">
+			<img src="img/augusburnsred/guardians.jpg" alt="">
 			<div class="capa">
-				<h3>ACϟCD</h3>
-				<p>Highway to Hell</p> <br>
-				<a href="acdc/highwaytohell.html">Ir Al Álbum</a>
+				<h3>August Burns Red</h3>
+				<p>Guardians</p> <br>
+				<a href="augustburnsred/guardians.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 	</div>
