--- a/bands.html
+++ b/bands.html
@@ -157,6 +157,18 @@
 			</a>	
 		</div>
 		<div class="contenedor_tarjeta">
+			<a href="anthrax/anthrax.html">
+				<figure>
+					<img src="img/anthrax/anthrax1.jpg" class="frontal" alt="">
+						<figcaption class="trasera">
+							<h2 class="titulo">Anthrax</h2>
+							<hr>
+							<p>Anthrax es una banda estadounidense de thrash metal formada en Nueva York en 1981, por el guitarrista Scott Ian y el bajista Dan Lilker.​ Está considerado como uno de los grupos principales de la escena thrash junto a Metallica, Megadeth y Slayer.​​</p>
+						</figcaption>
+				</figure>
+			</a>	
+		</div>
+		<div class="contenedor_tarjeta">
 			<a href="blacksabbath/blacksabbath.html">
 				<figure>
 					<img src="img/blacksabbath/blacksabbath.jpg" class="frontal" alt="">
