--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 			</div>
 		</figure>
 		<figure>
-			<img src="img/machinehead/throughthesshesofempires2003.jpg" alt="">
+			<img src="img/anthrax/amongtheliving.jpg" alt="">
 			<div class="capa">
-				<h3>Machine Head</h3>
-				<p>Through the Shes of Empires</p> <br>
-				<a href="machinehead/throughtheshesofempires.html">Ir Al Álbum</a>
+				<h3>Anthrax</h3>
+				<p>Among The Living</p> <br>
+				<a href="anthrax/amongtheliving.html">Ir Al Álbum</a>
 			</div>
 		</figure>
 	</div>
@@ -121,11 +121,11 @@
 
 	<div class="contenedordos">
 		<figure>
-			<img src="img/acdc/acdc.jpg" alt="">
+			<img src="img/anthrax/anthrax1.jpg" alt="">
 			<div class="capa">
-				<h3>ACϟCD</h3>
+				<h3>Anthrax</h3>
 				<br>
-				<a href="acdc/albums.html">Álbums</a>
+				<a href="anthrax/albums.html">Álbums</a>
 			</div>
 		</figure>
 		<figure>
